--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -48,6 +47,13 @@
       <div class="site-content">
         <main role="main" class="container">
           <div class=row>
+            {% if messages %}
+              {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                  {{ message }}
+                </div>
+              {% endfor %}
+            {% endif %}
             {% block content %}{% endblock content %}
           </div>
         </main>
