--- a/bfl/users/templates/users/login.html
+++ b/bfl/users/templates/users/login.html
@@ -1,14 +1,14 @@
-{% extends "log/base.html" %}
+{% extends "users/base.html" %}
 {% load static %}
 
 {% block content %}
 <div class="container">
   <div class="row">
     <div class="col-sm-9">
-      <h1 style="color: white; padding-bottom: 10px;">Create an Account</h1>
+      <h1 style="color: white; padding-bottom: 10px;">Login</h1>
     </div>
     <div class="col-sm-3">
-      <p style="color: white; padding: 10px 0 0 3em;">(<a href="{% url 'login' %}">Already have an account?</a>)</p>
+      <p style="color: white; padding: 10px 0 0 3em;">(<a href="{% url 'register' %}">Don't have an account?</a>)</p>
     </div>
   </div>
   <div class="card">
@@ -21,10 +21,6 @@
         <div class="form-group">
           <label for="pw">Password</label>
           <input type="password" class="form-control" id="pw">
-        </div>
-        <div class="form-group">
-          <label for="confirm-pw">Confirm Password</label>
-          <input type="password" class="form-control" id="confirm-pw">
         </div>
       </form>
     </div>
