--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -30,15 +30,48 @@
       <!-- NavBar -->
       <header class="site-header">
         <nav class="navbar navbar-expand-lg scrolling-navbar" style="background-color: rgba(0,0,0,0.25)">
-          <a class="navbar-brand" href="{% url 'landing' %}">
-            <img src="{% static 'media/images/logo/bfl-logo_50x50.png' %}" />
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
-            aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarToggler">
-            <!-- place the rest of the NavBar elements here -->
+          <div class="container">
+            {% if user.is_authenticated %}
+              <a class="navbar-brand" href="{% url 'user_home' %}">
+                <img src="{% static 'log/media/images/logo/bfl-logo_50x50.png' %}" />
+              </a>
+            {% else %}
+              <a class="navbar-brand" href="{% url 'landing' %}">
+                <img src="{% static 'log/media/images/logo/bfl-logo_50x50.png' %}" />
+              </a>
+            {% endif %}
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarToggler">
+              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                  {% if user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'user_home' %}">Home</a>
+                  {% else %}
+                    <a class="nav-link" href="{% url 'landing' %}">Home</a>
+                  {% endif %}
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                {% if user.is_authenticated %}
+                  <div class="dropdown">
+                    <a class="dropdown-toggle" href="#" id="dropdownMenuLink"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      {{ user.first_name }} {{ user.last_name }}
+                    </a>
+                    <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuLink">
+                      <h6 class="dropdown-header">@{{ user.username }}</h6>
+                      <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Settings</a>
+                      <a class="dropdown-item" href="{% url 'logout' %}" style="color: black;">Logout</a>
+                    </div>
+                  </div>
+                {% else %}
+                  <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                  <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                {% endif%}
+              </form>
+            </div>
           </div>
         </nav>
       </header>
