--- a/bfl/users/templates/users/landing.html
+++ b/bfl/users/templates/users/landing.html
@@ -36,11 +36,11 @@
         <main role="main" class="container-fluid">
           <div class="row">
             <div class="card bg-dark">
-              <img src="{% static 'media/images/gym-weight.jpg' %}" style="width: 100%; min-height: 800px;" alt="Gym Weights">
+              <img src="{% static 'log/media/images/gym-weight.jpg' %}" style="width: 100%; min-height: 800px;" alt="Gym Weights">
               <div class="card-img-overlay text-center" style="padding-top: 2em; color: white; background-color: rgba(0,0,0,0.75)">
                 <h1 style="color: white; font-size: 30px; padding-bottom: 7em;">
                   Billed Fitness Log
-                  <img src="{% static 'media/images/logo/bfl-logo_800x800.png' %}" style="width: 3%; min-width: 3%; min-height: 3%;">
+                  <img src="{% static 'log/media/images/logo/bfl-logo_800x800.png' %}" style="width: 3%; min-width: 3%; min-height: 3%;">
                 </h1>
                 <h1 class="card-title" style="font-size: 55px; line-height: 50px;">TRACK ALL OF YOUR WORKOUTS</h1>
                 <h2 class="card-content" style="font-size: 30px; line-height: 50px;">It is easy, free, and just a few clicks away!</h2>
