--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -45,11 +45,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggler">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
+                <li class="nav-item">
                   {% if user.is_authenticated %}
                     <a class="nav-link" href="{% url 'user_home' %}">Home</a>
                   {% else %}
                     <a class="nav-link" href="{% url 'landing' %}">Home</a>
+                  {% endif %}
+                </li>
+                <li class="nav-item">
+                  {% if user.is_superuser %}
+                    <a class="nav-link" href="/admin/">Admin</a>
                   {% endif %}
                 </li>
               </ul>
