--- a/bfl/users/templates/users/landing.html
+++ b/bfl/users/templates/users/landing.html
@@ -77,7 +77,7 @@
                     <path d="M6.445 11.688V6.354h-.633A12.6 12.6 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61h.675zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82h-.684zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23z"/>
                   </svg>
                   <h4 class="card-title" style="padding-top: 10px;">Log Your Workouts</h4>
-                  <p class="card-text">You are able to log your workout sessions for the day, whether it is a weightlifting or cardio workout.</p>
+                  <p class="card-text">All users are able to log each of their workouts (cardio or weightlifting) during their workout session for any day of their choosing.</p>
                 </div>
               </div>
             </div>
@@ -90,7 +90,7 @@
                     <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
                   </svg>
                   <h4 class="card-title" style="padding-top: 10px;">Edit Your Workouts</h4>
-                  <p class="card-text">If you made a mistake with your workout? Don't worry! You are able to edit your workout to your liking.</p>
+                  <p class="card-text">If you made a mistake or need to make a change to your workout, do not worry! You are able to edit any of your workout sessions to your liking.</p>
                 </div>
               </div>
             </div>
