--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -11,7 +11,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!-- Static CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'log/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'users/main.css' %}">
 
     <!-- Fonts -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
@@ -23,6 +23,9 @@
       <title>Billed Fitness Log</title>
     {% endif %}
 
+    <!-- Favicon -->
+    <link rel="shortcut icon"  type="image/x-icon" href="{% static 'users/images/logo/favicon.ico' %}" />
+
   </head>
   <body>
 
@@ -33,11 +36,11 @@
           <div class="container">
             {% if user.is_authenticated %}
               <a class="navbar-brand" href="{% url 'user_home' %}">
-                <img src="{% static 'log/media/images/logo/bfl-logo_50x50.png' %}" />
+                <img src="{% static 'users/images/logo/bfl-logo_50x50.png' %}" />
               </a>
             {% else %}
               <a class="navbar-brand" href="{% url 'landing' %}">
-                <img src="{% static 'log/media/images/logo/bfl-logo_50x50.png' %}" />
+                <img src="{% static 'users/images/logo/bfl-logo_50x50.png' %}" />
               </a>
             {% endif %}
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
