--- a/bfl/users/templates/users/landing.html
+++ b/bfl/users/templates/users/landing.html
@@ -12,7 +12,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!-- Static CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'log/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'users/main.css' %}">
 
     <!-- Fonts -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
@@ -25,7 +25,7 @@
     {% endif %}
 
     <!-- Favicon -->
-    <link rel="shortcut icon"  type="image/x-icon" href="{% static 'media/images/logo/favicon.ico' %}" />
+    <link rel="shortcut icon"  type="image/x-icon" href="{% static 'users/images/logo/favicon.ico' %}" />
 
   </head>
   <body>
@@ -36,11 +36,11 @@
         <main role="main" class="container-fluid">
           <div class="row">
             <div class="card bg-dark">
-              <img src="{% static 'log/media/images/gym-weight.jpg' %}" style="width: 100%; min-height: 800px;" alt="Gym Weights">
+              <img src="{% static 'users/images/gym-weight.jpg' %}" style="width: 100%; min-height: 800px;" alt="Gym Weights">
               <div class="card-img-overlay text-center" style="padding-top: 2em; color: white; background-color: rgba(0,0,0,0.75)">
                 <h1 style="color: white; font-size: 30px; padding-bottom: 7em;">
                   Billed Fitness Log
-                  <img src="{% static 'log/media/images/logo/bfl-logo_800x800.png' %}" style="width: 3%; min-width: 3%; min-height: 3%;">
+                  <img src="{% static 'users/images/logo/bfl-logo_800x800.png' %}" style="width: 3%; min-width: 3%; min-height: 3%;">
                 </h1>
                 <h1 class="card-title" style="font-size: 55px; line-height: 50px;">TRACK ALL OF YOUR WORKOUTS</h1>
                 <h2 class="card-content" style="font-size: 30px; line-height: 50px;">It is easy, free, and just a few clicks away!</h2>
