--- a/bfl/users/templates/users/login.html
+++ b/bfl/users/templates/users/login.html
@@ -7,7 +7,9 @@
       <h1 style="color: white; padding-bottom: 10px;">Login</h1>
     </div>
     <div class="col-sm-3">
-      <p style="color: white; padding: 10px 0 0 3em;">(<a href="{% url 'register' %}">Don't have an account?</a>)</p>
+      <p style="color: white; padding: 10px 0 0 3em;">
+        (<a style="color: white;" href="{% url 'register' %}">Don't have an account?</a>)
+      </p>
     </div>
   </div>
   <div class="card">
