--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto" />
 
     {% if title %}
-      <title>Billed Fitness Log | {{ title }}</title>
+      <title>BFL | {{ title }}</title>
     {% else %}
       <title>Billed Fitness Log</title>
     {% endif %}
@@ -70,6 +70,7 @@
                     </a>
                     <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuLink">
                       <h6 class="dropdown-header">@{{ user.username }}</h6>
+                      <a class="dropdown-item" href="{% url 'profile' %}" style="color: black;">My Profile</a>
                       <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Settings</a>
                       <a class="dropdown-item" href="{% url 'logout' %}" style="color: black;">Logout</a>
                     </div>
