--- a/bfl/users/templates/users/landing.html
+++ b/bfl/users/templates/users/landing.html
@@ -18,11 +18,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto" />
 
-    {% if title %}
-      <title>Billed Fitness Log | {{ title }}</title>
-    {% else %}
-      <title>Billed Fitness Log</title>
-    {% endif %}
+    <title>Billed Fitness Log</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon"  type="image/x-icon" href="{% static 'users/images/logo/favicon.ico' %}" />
@@ -49,7 +45,7 @@
                   Get Started
                 </a>
                 <br/>
-                <a href="{% url 'login' %}" style="font-size: 16px">Already have an account?</a>
+                <a href="{% url 'login' %}" style="font-size: 16px; color: white;">Already have an account?</a>
               </div>
             </div>
           </div>
