--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -91,8 +91,11 @@
           <div class=row>
             {% if messages %}
               {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}">
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show">
                   {{ message }}
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
                 </div>
               {% endfor %}
             {% endif %}
