--- a/bfl/users/templates/users/user-home.html
+++ b/bfl/users/templates/users/user-home.html
@@ -1,5 +1,7 @@
 {% extends "users/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-  <h1>{{ user.username }}</h1>
+  <div class="container">
+    <h1>{{ user.username }}</h1>
+  </div>
 {% endblock content %}
