Edited the title template for pages and inserted another test case

--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto" />
 
     {% if title %}
-      <title>BFL | {{ title }}</title>
+      <title>{{ title }} | BFL</title>
     {% else %}
       <title>Billed Fitness Log</title>
     {% endif %}
