--- a/bfl/users/templates/users/user-home.html
+++ b/bfl/users/templates/users/user-home.html
@@ -2,6 +2,6 @@
 {% load crispy_forms_tags %}
 {% block content %}
   <div class="container">
-    <h1>{{ user.username }}</h1>
+    <h1 style="color: white;">{{ user.username }}</h1>
   </div>
 {% endblock content %}
