--- a/bfl/users/static/users/main.css
+++ b/bfl/users/static/users/main.css
@@ -49,8 +49,9 @@
 
 /* Apply Open Sans to Website */
 h1 {
+  display: block;
   font-family: "Open Sans";
-  font-size: 30px;
+  font-size: 2em;
   font-style: normal;
   font-variant: normal;
   font-weight: bold;
@@ -58,8 +59,9 @@ h1 {
 }
 
 h2 {
+  display: block;
   font-family: "Open Sans";
-  font-size: 22px;
+  font-size: 1.5em;
   font-style: normal;
   font-variant: normal;
   font-weight: bold;
@@ -67,8 +69,9 @@ h2 {
 }
 
 h3 {
+  display: block;
   font-family: "Open Sans";
-  font-size: 14px;
+  font-size: 1.17em;
   font-style: normal;
   font-variant: normal;
   font-weight: bold;
