--- a/bfl/users/templates/users/settings.html
+++ b/bfl/users/templates/users/settings.html
@@ -5,13 +5,15 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-9">
-      <h1 style="color: white; padding-bottom: 10px;">Settings</h1>
+      <h1 style="color: white; padding-bottom: 10px;">Account Settings</h1>
     </div>
   </div>
   <div class="card">
     <div class="card-body">
       <legend class="border-bottom mb-4">User Settings</legend>
-        <a class="settings-item" href="#">Change Password</a>
+      <a class="settings-item" href="{% url 'edit_profile' %}">Edit User Information</a> <br/>
+      <a class="settings-item" href="{% url 'change_password' %}">Change Password</a> <br/>
+      <a class="settings-item" href="#">Deactivate Your Account</a>
     </div>
   </div>
 </div>
