Created the ability to deactivate the user account.

--- a/bfl/users/templates/users/settings.html
+++ b/bfl/users/templates/users/settings.html
@@ -13,7 +13,7 @@
       <legend class="border-bottom mb-4">User Settings</legend>
       <a class="settings-item" href="{% url 'edit_profile' %}">Edit User Information</a> <br/>
       <a class="settings-item" href="{% url 'change_password' %}">Change Password</a> <br/>
-      <a class="settings-item" href="#">Deactivate Your Account</a>
+      <a class="settings-item" href="{% url 'deactivate' %}">Deactivate Your Account</a>
     </div>
   </div>
 </div>
