--- a/bfl/users/templates/users/change_password.html
+++ b/bfl/users/templates/users/change_password.html
@@ -15,7 +15,8 @@
           {{ form | crispy }}
         </fieldset>
         <div class="form-group">
-          <button class="btn btn-lg" style="background-color: #fbde44ff; color: black;" type="submit">Submit</button>
+          <a class="btn btn-lg btn-secondary" href="{% url 'settings' %}" role="button">Cancel</a>
+          <button id="form-button" class="btn btn-lg" type="submit">Update</button>
         </div>
       </form>
     </div>
