--- a/bfl/users/templates/users/edit-profile.html
+++ b/bfl/users/templates/users/edit-profile.html
@@ -19,8 +19,8 @@
         {{ profile_form | crispy }}
       </fieldset>
       <div class="form-group">
-        <a class="btn btn-secondary active" href="{% url 'profile' %}" role="button">Cancel</a>
-        <button class="btn" style="background-color: #fbde44ff; font-weight: bold; padding: 7px;" type="submit">Update</button>
+        <a class="btn btn-lg btn-secondary" href="{% url 'profile' %}" role="button">Cancel</a>
+        <button id="form-button" class="btn btn-lg" type="submit">Update</button>
       </div>
     </form>
   </div>
