--- a/bfl/users/templates/users/profile.html
+++ b/bfl/users/templates/users/profile.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="col-sm-1">
-        <a class="btn btn-secondary" href="{% url 'edit_profile' %}" role="button">Edit</a>
+        <a class="btn btn-secondary" href="{% url 'edit_profile' %}?next={{ request.path }}" role="button">Edit</a>
       </div>
     </div>
   </div>
