--- a/bfl/users/templates/users/settings.html
+++ b/bfl/users/templates/users/settings.html
@@ -11,7 +11,7 @@
   <div class="card">
     <div class="card-body">
       <legend class="border-bottom mb-4">User Settings</legend>
-      <a class="settings-item" href="{% url 'edit_profile' %}">Edit User Information</a> <br/>
+      <a class="settings-item" href="{% url 'edit_profile' %}?next={{ request.path }}">Edit User Information</a> <br/>
       <a class="settings-item" href="{% url 'change_password' %}">Change Password</a> <br/>
       <a class="settings-item" href="{% url 'deactivate' %}">Deactivate Your Account</a>
     </div>
