--- a/bfl/users/templates/users/edit-profile.html
+++ b/bfl/users/templates/users/edit-profile.html
@@ -20,8 +20,8 @@
       </fieldset>
       <div class="form-group">
         <input type="hidden" name="next" value="{{ request.GET.next }}">
-        <a class="btn btn-lg btn-secondary" href="{{ request.GET.next }}" role="button">Cancel</a>
-        <button id="form-button" class="btn btn-lg" type="submit">Update</button>
+        <a class="btn btn-secondary" href="{{ request.GET.next }}" role="button">Cancel</a>
+        <button id="form-button" class="btn" type="submit">Update</button>
       </div>
     </form>
   </div>
