--- a/bfl/users/templates/users/register.html
+++ b/bfl/users/templates/users/register.html
@@ -20,7 +20,7 @@
           {{ form | crispy }}
         </fieldset>
         <div class="form-group">
-          <button id="form-button" class="btn btn-lg" type="submit">Sign Up</button>
+          <button id="form-button" class="btn" type="submit">Sign Up</button>
         </div>
       </form>
     </div>
