--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -32,7 +32,7 @@
     <div class="site">
       <!-- NavBar -->
       <header class="site-header">
-        <nav class="navbar navbar-expand-lg scrolling-navbar" style="background-color: rgba(0,0,0,0.25)">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgba(0,0,0,0.25)">
           <div class="container">
             {% if user.is_authenticated %}
               <a class="navbar-brand" href="{% url 'user_home' %}">
@@ -43,7 +43,7 @@
                 <img src="{% static 'users/images/logo/bfl-logo_50x50.png' %}" />
               </a>
             {% endif %}
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarToggler">
@@ -62,10 +62,10 @@
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
+              <ul class="navbar-nav">
                 {% if user.is_authenticated %}
-                  <div class="dropdown">
-                    <a class="dropdown-toggle" href="#" id="dropdownMenuLink"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       {{ user.first_name }} {{ user.last_name }}
                     </a>
                     <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuLink">
@@ -74,12 +74,16 @@
                       <a class="dropdown-item" href="{% url 'settings' %}" style="color: black;">Settings</a>
                       <a class="dropdown-item" href="{% url 'logout' %}" style="color: black;">Logout</a>
                     </div>
-                  </div>
+                  </li>
                 {% else %}
-                  <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                  <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                  <li class="nav-item">
+                    <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                  </li>
                 {% endif%}
-              </form>
+              </ul>
             </div>
           </div>
         </nav>
