--- a/bfl/users/static/users/main.css
+++ b/bfl/users/static/users/main.css
@@ -30,11 +30,11 @@
 }
 
 /* Links */
-#navbar-link, .dropdown-toggle {
+#navbar-link, .nav-link, .dropdown-toggle {
   color: white;
 }
 
-#navbar-link:hover, .dropdown-toggle:hover, .settings-item:hover {
+#navbar-link:hover, .nav-link:hover, .dropdown-toggle:hover, .settings-item:hover {
   color: gray;
   text-decoration: none;
 }
