--- a/bfl/users/templates/users/deactivate.html
+++ b/bfl/users/templates/users/deactivate.html
@@ -3,9 +3,11 @@
 <div class="container text-center">
   <form method="POST">
     {% csrf_token %}
+    <!-- If the user is a superuser/admin, do not let them have the access to disable their account on this page. -->
     {% if user.is_superuser %}
       <h1 style="color: white; padding-bottom: 1em;">Admins are not able to deactivate their account without approval.</h1>
       <a class="btn btn-lg btn-secondary" href="{% url 'settings' %}" role="button">Go Back</a>
+    <!-- If the user is a regular user, remind them about implications of deactivating their account. -->
     {% else %}
       <h1 style="color: white;">Are you sure you want to deactivate your account?</h1>
       <h2 style="color: white; padding: 1em 0 1em 0;">
