--- a/bfl/users/static/users/main.css
+++ b/bfl/users/static/users/main.css
@@ -29,7 +29,17 @@
     visibility: hidden;
 }
 
-/* Links */
+/* NavBar */
+#navbar {
+   background-color: rgba(0,0,0,0.25);
+}
+
+/* Footer */
+#footer {
+  background-color: #28334aff;
+}
+
+/* Page Contents */
 #navbar-link, .nav-link, .dropdown-toggle {
   color: white;
 }
@@ -45,6 +55,28 @@
 
 .settings-item {
   color: black;
+}
+
+#profile-image {
+  width: 10em;
+  height: 10em;
+  max-width: 10em;
+  max-height: 10em;
+  min-width: 2em;
+  min-height: 2em;
+}
+
+#profile-info {
+  padding-top: 2.5em;
+}
+
+#edit-profile-form {
+  padding-top: 2em;
+}
+
+#page-title {
+  color: white;
+  padding-bottom: 1em;
 }
 
 #form-button {
