--- a/bfl/users/templates/users/change_password.html
+++ b/bfl/users/templates/users/change_password.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-9">
-      <h1 style="color: white; padding-bottom: 10px;">Change Password</h1>
+      <h1 id="page-title">Change Password</h1>
     </div>
   </div>
   <div class="card">
