--- a/bfl/users/templates/users/edit-profile.html
+++ b/bfl/users/templates/users/edit-profile.html
@@ -4,14 +4,14 @@
 <div class="container-fluid card" style="background-color: whitesmoke;">
   <div class="card-body">
     <div class="media">
-      <img class="rounded-circle account-img align-self-center mr-3" style="width: 10em; height: 10em;" src="{{ user.profile.image.url }}">
-      <div class="media-body" style="padding-top: 2.5em;">
+      <img id="profile-image" class="rounded-circle account-img align-self-center mr-3" src="{{ user.profile.image.url }}">
+      <div id="profile-info" class="media-body">
         <h1 class="account-heading mt-0">{{ user.first_name }} {{ user.last_name }}</h1>
         <h3 class="text-secondary">@{{ user.username }}</h3>
         <h3 class="text-secondary">{{ user.email }}</h3>
       </div>
     </div>
-    <form method="POST" enctype="multipart/form-data" style="padding-top: 2em">
+    <form id="edit-profile-form" method="POST" enctype="multipart/form-data">
       {% csrf_token %}
       <fieldset class="form-group">
         <legend class="border-bottom mb-4">Profile Info</legend>
