--- a/bfl/users/templates/users/landing.html
+++ b/bfl/users/templates/users/landing.html
@@ -48,67 +48,11 @@
               </div>
             </div>
           </div>
-          <div class="row" style="margin: 20px 0 20px 0">
-            <!-- Create Account Card -->
-            <div class="col-sm-3">
-              <div class="card">
-                <div class="card-body text-center">
-                  <svg width="5em" height="5em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
-                    <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                    <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
-                  </svg>
-                  <h4 class="card-title" style="padding-top: 10px;">Customize Your Own Account</h4>
-                  <p class="card-text">Create and customize your own account to keep track of your workouts and all the detailed information related to your workout session.</p>
-                </div>
-              </div>
-            </div>
-            <!-- Log Workouts Card -->
-            <div class="col-sm-3">
-              <div class="card">
-                <div class="card-body text-center">
-                  <svg width="5em" height="5em" viewBox="0 0 16 16" class="bi bi-calendar-date" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
-                    <path d="M6.445 11.688V6.354h-.633A12.6 12.6 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61h.675zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82h-.684zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23z"/>
-                  </svg>
-                  <h4 class="card-title" style="padding-top: 10px;">Log Your Workouts</h4>
-                  <p class="card-text">All users are able to log each of their workouts (cardio or weightlifting) during their workout session for any day of their choosing.</p>
-                </div>
-              </div>
-            </div>
-            <!-- Edit Workouts Card -->
-            <div class="col-sm-3">
-              <div class="card">
-                <div class="card-body text-center">
-                  <svg width="5em" height="5em" viewBox="0 0 16 16" class="bi bi-pencil-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-                  </svg>
-                  <h4 class="card-title" style="padding-top: 10px;">Edit Your Workouts</h4>
-                  <p class="card-text">If you made a mistake or need to make a change to your workout, do not worry! You are able to edit any of your workout sessions to your liking.</p>
-                </div>
-              </div>
-            </div>
-            <!-- Access Anywhere Card -->
-            <div class="col-sm-3">
-              <div class="card">
-                <div class="card-body text-center">
-                  <svg width="5em" height="5em" viewBox="0 0 16 16" class="bi bi-laptop" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M13.5 3h-11a.5.5 0 0 0-.5.5V11h12V3.5a.5.5 0 0 0-.5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11z"/>
-                    <path d="M0 12h16v.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5V12z"/>
-                  </svg>
-                  <h4 class="card-title" style="padding-top: 10px;">Access Your Workouts Anywhere</h4>
-                  <p class="card-text">If you are at home, you can log your workouts! If you are at the gym, you can log your workouts!
-                  Just go to our website [insert website here] to access your workouts ANYWHERE!</p>
-                </div>
-              </div>
-            </div>
-          </div>
         </main>
       </div>
 
       <!-- Footer -->
-      <footer id="footer" class="py-4 text-white-50" style="background-color: #28334aff;">
+      <footer id="footer" class="py-4 text-white-50">
         <ul class="nav justify-content-center">
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">About Us</a>
