--- a/bfl/users/templates/users/profile.html
+++ b/bfl/users/templates/users/profile.html
@@ -6,8 +6,8 @@
     <div class="row">
       <div class="col-sm-11">
         <div class="media">
-          <img class="rounded-circle account-img align-self-center mr-3" style="width: 10em; height: 10em;" src="{{ user.profile.image.url }}">
-          <div class="media-body" style="padding-top: 2.5em;">
+          <img id="profile-image" class="rounded-circle account-img align-self-center mr-3" src="{{ user.profile.image.url }}">
+          <div id="profile-info" class="media-body">
             <h1 class="mt-0">
               {{ user.first_name }} {{ user.last_name }}
             </h1>
