--- a/bfl/users/templates/users/settings.html
+++ b/bfl/users/templates/users/settings.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-9">
-      <h1 style="color: white; padding-bottom: 10px;">Account Settings</h1>
+      <h1 id="page-title">Account Settings</h1>
     </div>
   </div>
   <div class="card">
