--- a/bfl/users/templates/users/change-password.html
+++ b/bfl/users/templates/users/change-password.html
@@ -2,14 +2,9 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="container">
-  <div class="row align-items-center">
+  <div class="row">
     <div class="col-sm-9">
-      <h1 class="page-title">
-        Login
-      </h1>
-    </div>
-    <div class="col-sm-3 text-right">
-      <a style="color: white;" href="{% url 'register' %}">Don't have an account?</a>
+      <h1 class="page-title">Change Password</h1>
     </div>
   </div>
   <div class="card">
@@ -20,7 +15,8 @@
           {{ form | crispy }}
         </fieldset>
         <div class="form-group">
-          <button class="btn form-button" type="submit">Login</button>
+          <a class="btn btn-secondary" href="{% url 'settings' %}" role="button">Cancel</a>
+          <button class="btn form-button" type="submit">Update</button>
         </div>
       </form>
     </div>
