--- a/bfl/users/templates/users/landing.html
+++ b/bfl/users/templates/users/landing.html
@@ -39,7 +39,7 @@
                 </h1>
                 <h1 class="card-title" style="font-size: 55px; line-height: 50px;">TRACK ALL OF YOUR WORKOUTS</h1>
                 <h2 class="card-content" style="font-size: 30px; line-height: 50px;">It is easy, free, and just a few clicks away!</h2>
-                <a id="form-button" role="button" class="btn btn-lg" href="{% url 'register' %}"
+                <a role="button" class="btn btn-lg form-button" href="{% url 'register' %}"
                 style="padding: 10px 30px 10px 30px; margin: 10px 0 5px; font-weight: 600;">
                   Get Started
                 </a>
