--- a/bfl/users/templates/users/register.html
+++ b/bfl/users/templates/users/register.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row align-items-center">
     <div class="col-sm-9">
-      <h1 id="page-title">
+      <h1 class="page-title">
         Create an Account
       </h1>
     </div>
@@ -20,7 +20,7 @@
           {{ form | crispy }}
         </fieldset>
         <div class="form-group">
-          <button id="form-button" class="btn" type="submit">Sign Up</button>
+          <button class="btn form-button" type="submit">Sign Up</button>
         </div>
       </form>
     </div>
