--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -11,7 +11,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!-- Static CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'users/main.css' %}?20200928">
+    <link rel="stylesheet" type="text/css" href="{% static 'users/main.css' %}">
 
     <!-- Fonts -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
@@ -36,7 +36,7 @@
         <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
           <div class="container">
             {% if user.is_authenticated %}
-              <a class="navbar-brand" href="{% url 'user_home' %}">
+              <a class="navbar-brand" href="{% url 'user-home' %}">
                 <img src="{% static 'users/images/logo/bfl-logo_50x50.png' %}" />
               </a>
             {% else %}
@@ -51,36 +51,42 @@
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
                   {% if user.is_authenticated %}
-                    <a id="navbar-link" class="nav-link" href="{% url 'user_home' %}">Home</a>
+                    <a class="nav-link" href="{% url 'user-home' %}">Home</a>
                   {% else %}
-                    <a id="navbar-link" class="nav-link" href="{% url 'landing' %}">Home</a>
+                    <a class="nav-link" href="{% url 'landing' %}">Home</a>
                   {% endif %}
                 </li>
                 <li class="nav-item">
                   {% if user.is_superuser %}
-                    <a id="navbar-link" class="nav-link" href="/admin/">Admin</a>
+                    <a class="nav-link" href="/admin/">Admin</a>
+                  {% endif %}
+                </li>
+                <li class="nav-item">
+                  {% if user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'session-list' %}">My Sessions</a>
                   {% endif %}
                 </li>
               </ul>
               <ul class="navbar-nav">
                 {% if user.is_authenticated %}
                   <li class="nav-item dropdown">
-                    <a id="navbar-link" class="nav-link dropdown-toggle" href="#" id="dropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       {{ user.first_name }} {{ user.last_name }}
                     </a>
                     <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuLink">
                       <h6 class="dropdown-header">@{{ user.username }}</h6>
                       <a class="dropdown-item" href="{% url 'profile' user.username %}">My Profile</a>
                       <a class="dropdown-item" href="{% url 'settings' %}">Settings</a>
+                      <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                     </div>
                   </li>
                 {% else %}
                   <li class="nav-item">
-                    <a id="navbar-link" class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                    <a class="nav-item nav-link nbl" href="{% url 'login' %}">Login</a>
                   </li>
                   <li class="nav-item">
-                    <a id="navbar-link" class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                    <a class="nav-item nav-link nbl" href="{% url 'register' %}">Register</a>
                   </li>
                 {% endif%}
               </ul>
