--- a/bfl/users/templates/users/edit-profile.html
+++ b/bfl/users/templates/users/edit-profile.html
@@ -21,7 +21,7 @@
       <div class="form-group">
         <input type="hidden" name="next" value="{{ referer }}">
         <a class="btn btn-secondary" href="{{ referer }}" role="button">Cancel</a>
-        <button id="form-button" class="btn" type="submit">Update</button>
+        <button class="btn form-button" type="submit">Update</button>
       </div>
     </form>
   </div>
