--- a/bfl/users/templates/users/settings.html
+++ b/bfl/users/templates/users/settings.html
@@ -5,14 +5,14 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-9">
-      <h1 id="page-title">Account Settings</h1>
+      <h1 class="page-title">Account Settings</h1>
     </div>
   </div>
   <div class="card">
     <div class="card-body">
       <legend class="border-bottom mb-4">User Settings</legend>
-      <a class="settings-item" href="{% url 'edit_profile' user.username %}">Edit User Information</a> <br/>
-      <a class="settings-item" href="{% url 'change_password' %}">Change Password</a> <br/>
+      <a class="settings-item" href="{% url 'edit-profile' user.username %}">Edit User Information</a> <br/>
+      <a class="settings-item" href="{% url 'change-password' %}">Change Password</a> <br/>
       <a class="settings-item" href="{% url 'deactivate' %}">Deactivate Your Account</a>
     </div>
   </div>
