Added flatpickr widget for the datepicker

--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -26,6 +26,8 @@
     <!-- Favicon -->
     <link rel="shortcut icon"  type="image/x-icon" href="{% static 'users/images/logo/favicon.ico' %}" />
 
+    {% block head %}{% endblock head %}
+
   </head>
   <body>
 
