--- a/bfl/users/templates/users/settings.html
+++ b/bfl/users/templates/users/settings.html
@@ -12,6 +12,7 @@
     <div class="card-body">
       <legend class="border-bottom mb-4">User Settings</legend>
       <a class="settings-item" href="{% url 'edit-profile' user.username %}">Edit User Information</a> <br/>
+      <a class="settings-item" href="{% url 'edit-workout-info' %}">Edit Workout Information</a> <br/>
       <a class="settings-item" href="{% url 'change-password' %}">Change Password</a> <br/>
       <a class="settings-item" href="{% url 'deactivate' %}">Deactivate Your Account</a>
     </div>
