Updated certain pages to use function-based views instead of class-based

--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -65,7 +65,7 @@
                 </li>
                 <li class="nav-item">
                   {% if user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'workout-list' %}">My Workouts</a>
+                    <a class="nav-link" href="{% url 'my-workouts' %}">My Workouts</a>
                   {% endif %}
                 </li>
               </ul>
