--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -58,11 +58,6 @@
                     <a class="nav-link" href="{% url 'landing' %}">Home</a>
                   {% endif %}
                 </li>
-                {% if user.is_superuser %}
-                <li class="nav-item">
-                  <a class="nav-link" href="/admin/">Admin</a>
-                </li>
-                {% endif %}
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'my-workouts' %}">My Workouts</a>
@@ -80,6 +75,9 @@
                     </a>
                     <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuLink">
                       <h6 class="dropdown-header">@{{ user.username }}</h6>
+                      {% if user.is_superuser %}
+                      <a class="dropdown-item" href="/admin/">Admin</a>
+                      {% endif %}
                       <a class="dropdown-item" href="{% url 'profile' user.username %}">My Profile</a>
                       <a class="dropdown-item" href="{% url 'settings' %}">Settings</a>
                       <div class="dropdown-divider"></div>
