Minor changes to My Workouts pages

--- a/bfl/users/templates/users/base.html
+++ b/bfl/users/templates/users/base.html
@@ -62,9 +62,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'my-workouts' %}">My Workouts</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'workout-select' %}">Add Workout</a>
-                </li>
                 {% endif %}
               </ul>
               <ul class="navbar-nav">
@@ -126,10 +123,16 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">About Us</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Feedback</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://github.com/keanuwilliams/Billed-Fitness-Log" target="_blank">GitHub Repo</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Help</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Support</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Terms & Conditions</a>
