--- a/bfl/users/templates/users/edit-profile.html
+++ b/bfl/users/templates/users/edit-profile.html
@@ -14,7 +14,7 @@
     <form id="edit-profile-form" method="POST" enctype="multipart/form-data">
       {% csrf_token %}
       <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Profile Info</legend>
+        <legend class="border-bottom mb-4">Account Information</legend>
         {{ user_form | crispy }}
         {{ profile_form | crispy }}
       </fieldset>
