--- a/bfl/users/templates/users/edit-user-preferences.html
+++ b/bfl/users/templates/users/edit-user-preferences.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-9">
-      <h1 class="page-title">Edit User Preferences</h1>
+      <h1 class="page-title">User Preferences</h1>
     </div>
   </div>
   <div class="card">
@@ -12,7 +12,7 @@
       <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-          <legend class="border-bottom mb-4">General User Information</legend>
+          <legend class="border-bottom mb-4">Workout Information</legend>
           {{ user_form | crispy }}
           <legend class="border-bottom mb-4">Units of Measurement</legend>
           {{ unit_form | crispy }}
