--- a/bfl/users/templates/users/profile.html
+++ b/bfl/users/templates/users/profile.html
@@ -21,7 +21,7 @@
       </div>
       <div class="col-sm-1">
         {% if object.user == user %}
-        <a class="btn btn-secondary" href="{% url 'edit-profile' user.username %}" role="button">Edit</a>
+        <a class="btn btn-secondary" href="{% url 'edit-profile' %}" role="button">Edit</a>
         {% endif %}
       </div>
     </div>
